fix z-index issue

--- a/webapp/static/sass/styles.scss
+++ b/webapp/static/sass/styles.scss
@@ -244,7 +244,7 @@ form {
 	top: 50px;
 	left: $sidebarWidth;
 	width: 100%;
-	z-index: 3;
+	z-index: 101; /* gotta be >100, which is the max z-index for selections */
 	background: #d9edf7;
 	padding: 1em;
 	@include box-shadow ( 0 1px 5px rgba(0, 0, 0, 0.075) );
